# Minepatch

./: Cargo.toml  README.md
src/: args.rs  constants.rs  error.rs  lib.rs  main.rs  msg.rs  prelude.rs
src/bundle/: error.rs  mod.rs  msg.rs
src/bundle/data/: filter.rs  mod.rs  model.rs  repo.rs
src/bundle/func/: create.rs  export.rs  import.rs  mod.rs  query.rs  validate.rs
src/cli/: instance.rs  mod.rs
src/commands/: mod.rs  update.rs
src/commands/instance/: cli.rs  data.rs  error.rs  instance_cli.rs  instance_error.rs  instance_file.rs  instance_logic.rs  instance_main.rs  instance_util.rs  mod.rs  output.rs
src/commands/pack/: mod.rs  pack_cli.rs  pack_main.rs
src/commands/vault/: mod.rs  vault_cli.rs  vault_error.rs  vault_main.rs  vault_util.rs
src/common/: comp.rs  db.rs  error.rs  event.rs  hash.rs  mod.rs  msg.rs  path_builder.rs  query.rs  repo.rs
src/common/comp/: func.rs  mod.rs  msg.rs
src/common/data/: mod.rs
src/common/db/: init.rs  mod.rs  repo.rs  schema.rs  sql_action.rs  traits.rs
src/common/event/: error.rs  event.rs  func.rs  mod.rs
src/common/file/: constants.rs  error.rs  file_utils.rs  mod.rs  path_builder.rs  path_utils.rs
src/common/hash/: func.rs  mod.rs  msg.rs
src/common/meta/: common.rs  data.rs  error.rs  fabric.rs  forge.rs  forge_legacy.rs  mod.rs  msg.rs
src/common/msg/: event.rs  func.rs  mod.rs  util.rs
src/common/output/: detailed.rs  list.rs  mod.rs  status.rs  table.rs
src/common/progress/: event.rs  mod.rs  util.rs
src/core/: file.rs  instance.rs  mod.rs
src/data/: instance.rs  mod.rs
src/error/: instance.rs  mod.rs  path.rs
src/instance/: cli.rs  data.rs  error.rs  mod.rs  msg.rs  output.rs
src/instance/data/: filter.rs  mod.rs  model.rs  queries.rs  query.rs  repo.rs
src/instance/func/: apply.rs  detect.rs  link.rs  list.rs  mod.rs  query.rs  rename.rs  unlink.rs  update.rs  validate.rs
src/logic/: file.rs  instance.rs  mod.rs
src/pack/: cli.rs  error.rs  mod.rs  msg.rs
src/pack/data/: base.rs  filter.rs  mod.rs  model.rs  pack.rs  patch.rs  query.rs  repo.rs
src/pack/func/: create.rs  list.rs  mod.rs  query.rs  validate.rs
src/patch/: error.rs  mod.rs  msg.rs
src/patch/data/: filter.rs  mod.rs  model.rs  query.rs  repo.rs
src/patch/func/: create.rs  delete.rs  diff.rs  exclude.rs  generate.rs  include.rs  mod.rs  query.rs  (+3 more)
src/patch_with_mods/: mod.rs
src/template/: error.rs  mod.rs  msg.rs
src/update/: mod.rs
src/util/: cli.rs  error.rs  mod.rs
src/vault/: cli.rs  data.rs  error.rs  mod.rs  msg.rs  output.rs
(+92 files in other folders)
