[package]
name = "minepatch"
version = "0.1.0"
edition = "2021"
authors = ["Tim Anhalt (BitTim)"]
description = "A utility to easily create, manage and apply patches for Minecraft modpacks"
readme = "README.md"
repository = "https://github.com/BitTim/Minepatch"
license = "GPL-3"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
directories = "5.0.1"
csv = "1.3.1"
tabled = { version = "0.17.0", features = ["ansi"] }
serde = { version = "1.0.216", features = ["derive"] }
colored = "2.2.0"
inquire = "0.7.5"
self_update = { version = "0.42.0", features = ["rustls"] }
sha256 = "1.5.0"
zip = "2.2.2"
toml = "0.8.19"
strum = "0.26.3"
strum_macros = "0.26.4"
