[package]
name = "minepatch"
version = "0.1.0"
edition = "2021"
authors = ["Tim Anhalt (BitTim)"]
description = "A utility to easily create, manage and apply patches for Minecraft modpacks"
readme = "README.md"
repository = "https://github.com/BitTim/Minepatch"
license = "GPL-3"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
directories = "6.0.0"
tabled = { version = "0.17.0", features = ["ansi"] }
serde = { version = "1.0.216", features = ["derive"] }
colored = "3.0.0"
inquire = "0.7.5"
self_update = { version = "0.42.0", features = ["rustls"] }
sha256 = "1.5.0"
zip = "2.2.2"
toml = "0.8.19"
strum = "0.26.3"
strum_macros = "0.26.4"
serde_json = "1.0.134"
indicatif = "0.17.9"
thiserror = "2.0.11"
rusqlite = { version = "0.33.0", features = ["bundled"] }
ron = "0.8.1"
symlink = "0.1.0"
