[package]
name = "minepatch"
version = "0.1.0"
edition = "2024"
authors = ["Tim Anhalt (BitTim)"]
description = "A utility to easily create, manage and apply patches for Minecraft modpacks"
readme = "README.md"
repository = "https://github.com/BitTim/Minepatch"
license = "GPL-3"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
directories = "6.0.0"
tabled = { version = "0.18.0", features = ["ansi"] }
serde = { version = "1.0.217", features = ["derive"] }
colored = "3.0.0"
inquire = "0.7.5"
self_update = { version = "0.42.0", features = ["rustls"] }
sha256 = "1.5.0"
zip = "2.2.2"
toml = "0.8.20"
strum = "0.27.0"
strum_macros = "0.27.0"
serde_json = "1.0.138"
indicatif = "0.17.11"
thiserror = "2.0.11"
rusqlite = { version = "0.33.0", features = ["bundled"] }
ron = "0.8.1"
symlink = "0.1.0"
uuid = { version = "1.13.1", features = ["v4"] }
rayon = "1.10.0"
bincode = "1.3.3"
flate2 = "1.0.35"
